# met-src

./: .gitignore  README.md  pyproject.toml
met_src/: __init__.py  coefficient_map.py  lpgrs.py  main.py  mineral.py  normal_distribution.py  sample.py
met_src/data/lpgrs/: lpgrs_high1_elem_abundance_2deg.lbl
met_src/data/samples/: convert.py
met_src/input/: __init__.py  csv.py  json.py
met_src/output/: __init__.py  json.py  png.py  shapefile.py
tests/: normal_distribution_test.py
