[tool.poetry]
name = "met-src"
version = "0.1.0"
description = "Continuous-Domain Constrainment of Lunar Meteorite Samples"
authors = ["Daniel Bolan <daniel.c.bolan@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "met_src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
click = "^8.1.3"
matplotlib = "^3.7.1"
gdal = "3.4.1"

[tool.poetry.scripts]
main = "met_src.main:main"
validation = "met_src.main:validate"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
